--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <aside id="ticket">
     <img src="images/ticket.png" alt="Cupom de desconto">
   </aside>
- 
+  <script defer src="js/bubbles.js"></script>
 </body>
 
 </html>
